--- a/about.html
+++ b/about.html
@@ -1,34 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style.css" />
-    <title>About</title>
-  </head>
-  <body>
-    <header>
-      <h1>Andre's Blog</h1>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/style.css" />
+  <title>About</title>
+</head>
+
+<body>
+  <header>
+    <h1>Andre's Blog</h1>
+    <nav>
       <h4><a href="/">Home</a></h4>
-      <p><a href="/about">About</a></p>
-    </header>
-    <p>Hi! I'm Andre and this is my blog.</p>
-    <p>
-      I have many posts of many topics. Too many to list here, even if the list
-      were numbered.
-    </p>
-    <p>
-      Maybe you're wondering about my list of credentials. You expected to see a
-      list of them in here? Well I don't have any, so too bad!
-    </p>
-    <p>Here's a selfie though: <img src="/pictures/selfie.jpg" /></p>
-    And here's a list of my favorite numbers!
-    <ol>
-      <li>9</li>
-      <li>2</li>
-      <li>1</li>
-      <li>5</li>
-      <li>7</li>
-    </ol>
-  </body>
+      <p><a href="/about.html">About</a></p>
+    </nav>
+  </header>
+  <p>Hi! I'm Andre and this is my blog.</p>
+  <p>
+    I have many posts of many topics. Too many to list here, even if the list
+    were numbered.
+  </p>
+  <p>
+    Maybe you're wondering about my list of credentials. You expected to see a
+    list of them in here? Well I don't have any, so too bad!
+  </p>
+  <p>Here's a selfie though: <img src="/pictures/selfie.jpg" alt="selfie" /></p>
+  And here's a list of my favorite numbers!
+  <ol>
+    <li>9</li>
+    <li>2</li>
+    <li>1</li>
+    <li>5</li>
+    <li>7</li>
+  </ol>
+
+
+
+  <br />
+  <div id="contact-form">
+    <div>Contact me!</div>
+    <form>
+      <div>
+        <label for="name">Your name:</label>
+        <input type="text" id="name" name="name">
+      </div>
+      <div>
+        <label for="emailaddr">Your email:</label>
+        <input type="text" id="emailaddr" name="emailaddr">
+      </div>
+      <div>
+        <label for="reason">Your reason for contact:</label>
+        <select name="reason" id="reason">
+          <option value="hi">Saying hi</option>
+          <option value="contract">Looking for a contractor</option>
+          <option value="interview">Interested in an interview</option>
+        </select>
+      </div>
+      <div>
+        <label for="opencomment">Comment:</label>
+        <textarea id="opencomment" name="opencomment"></textarea>
+      </div>
+
+      <input type="submit">
+    </form>
+  </div>
+
+</body>
+
 </html>
