--- a/about.html
+++ b/about.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- <link rel="stylesheet" href="/style.css" /> -->
+  <link rel="stylesheet" href="/style.css" />
   <title>About</title>
 </head>
 
 <body>
   <header>
-    <h1>Andre's Blog</h1>
     <nav>
+      <h1>Andre's Blog</h1>
       <h4><a href="/">Home</a></h4>
       <p><a href="/about.html">About</a></p>
     </nav>
@@ -35,9 +35,6 @@
     <li>7</li>
   </ol>
 
-
-
-  <br />
   <div id="contact-form">
     <div>Contact me!</div>
     <form>
