--- a/about.html
+++ b/about.html
@@ -16,53 +16,44 @@
       <p><a href="/about.html">About</a></p>
     </nav>
   </header>
-  <p>Hi! I'm Andre and this is my blog.</p>
-  <p>
-    I have many posts of many topics. Too many to list here, even if the list
-    were numbered.
-  </p>
-  <p>
-    Maybe you're wondering about my list of credentials. You expected to see a
-    list of them in here? Well I don't have any, so too bad!
-  </p>
-  <p>Here's a selfie though: <img src="/pictures/selfie.jpg" alt="selfie" /></p>
-  And here's a list of my favorite numbers!
-  <ol>
-    <li>9</li>
-    <li>2</li>
-    <li>1</li>
-    <li>5</li>
-    <li>7</li>
-  </ol>
 
-  <div id="contact-form">
-    <div>Contact me!</div>
-    <form>
-      <div>
-        <label for="name">Your name:</label>
-        <input type="text" id="name" name="name">
-      </div>
-      <div>
-        <label for="emailaddr">Your email:</label>
-        <input type="text" id="emailaddr" name="emailaddr">
-      </div>
-      <div>
-        <label for="reason">Your reason for contact:</label>
-        <select name="reason" id="reason">
-          <option value="hi">Saying hi</option>
-          <option value="contract">Looking for a contractor</option>
-          <option value="interview">Interested in an interview</option>
-        </select>
-      </div>
-      <div>
-        <label for="opencomment">Comment:</label>
-        <textarea id="opencomment" name="opencomment"></textarea>
-      </div>
-
-      <input type="submit">
-    </form>
+  <div class="container">
+    <div class="sidebar">
+      <p>Jump to article:</p>
+      <ul>
+        <li>
+          <a href="/#myplants">My plants!</a>
+        </li>
+        <li>
+          <a href="/#htmladvice">HTML Advice!</a>
+        </li>
+      </ul>
+    </div>
+    <div class="page-contents">
+      <p>Hi! I'm Andre and this is my blog.</p>
+      <p>
+        I have many posts of many topics. Too many to list here, even if the list
+        were numbered.
+      </p>
+      <p>
+        Maybe you're wondering about my list of credentials. You expected to see a
+        list of them in here? Well I don't have any, so too bad!
+      </p>
+      <figure id="house-fig">
+        <img src="/pictures/Hedrick.jpg" alt="My house" style="width:100%">
+        <figcaption>This is the house in which I live</figcaption>
+      </figure>
+      <p>Here's a selfie though: <img src="/pictures/selfie.jpg" alt="selfie" /></p>
+      And here's a list of my favorite numbers!
+      <ol>
+        <li>9</li>
+        <li>2</li>
+        <li>1</li>
+        <li>5</li>
+        <li>7</li>
+      </ol>
+    </div>
   </div>
-
 </body>
 
 </html>
